@@ -1,8 +1,0 @@
-{
-  "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json",
-  "gcovViewer.buildDirectories": ["${workspaceFolder}/build/src/lib"],
-  "sonarlint.connectedMode.project": {
-    "connectionId": "symless",
-    "projectKey": "symless_synergy-core"
-  }
-}
