@@ -49,22 +49,12 @@ macro(configure_definitions)
     set(PRODUCT_NAME $ENV{DESKFLOW_PRODUCT_NAME})
   endif()
 
-  if(LICENSED_PRODUCT)
-    message(STATUS "Licensed product")
-    add_definitions(-DDESKFLOW_LICENSED_PRODUCT=1)
-
-    if(ENABLE_ACTIVATION)
-      message(STATUS "Activation enabled")
-      add_definitions(-DDESKFLOW_ENABLE_ACTIVATION=1)
-    endif()
-  else()
+  if("${PRODUCT_NAME}" STREQUAL "")
     set(PRODUCT_NAME "Deskflow")
   endif()
 
-  if(PRODUCT_NAME)
-    message(STATUS "Product name: ${PRODUCT_NAME}")
-    add_definitions(-DDESKFLOW_PRODUCT_NAME="${PRODUCT_NAME}")
-  endif()
+  message(STATUS "Product name: ${PRODUCT_NAME}")
+  add_definitions(-DDESKFLOW_PRODUCT_NAME="${PRODUCT_NAME}")
 
   if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
     message(STATUS "Disabling debug build")
