@@ -1,0 +1,12 @@
+sonar.organization=deskflow
+sonar.projectKey=deskflow_deskflow
+sonar.sources=scripts,src/cmd,src/gui,src/lib
+sonar.tests=src/test
+sonar.exclusions=subprojects/**,build/**
+sonar.coverage.exclusions=subprojects/**,scripts/**,src/test/**
+sonar.cpd.exclusions=**/*Test*.cpp
+sonar.host.url=https://sonarcloud.io
+sonar.coverageReportPaths=${{ steps.coverage-paths.outputs.csv }}
+sonar.cfamily.compile-commands=build/compile_commands.json
+sonar.cfamily.threads=${{ env.CPU_CORE_COUNT }}
+sonar.python.version=3.10
