@@ -35,7 +35,7 @@ TEST(OSXClipboardTests, empty_openCalled_returnsTrue) {
 TEST(OSXClipboardTests, empty_singleFormat_hasReturnsFalse) {
   OSXClipboard clipboard;
   clipboard.open(0);
-  clipboard.add(OSXClipboard::kText, "deskflow rocks!");
+  clipboard.add(OSXClipboard::kText, "synergy rocks!");
 
   clipboard.empty();
 
@@ -47,17 +47,17 @@ TEST(OSXClipboardTests, add_newValue_valueWasStored) {
   OSXClipboard clipboard;
   clipboard.open(0);
 
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
 
   String actual = clipboard.get(IClipboard::kText);
-  EXPECT_EQ("deskflow rocks!", actual);
+  EXPECT_EQ("synergy rocks!", actual);
 }
 
 TEST(OSXClipboardTests, add_replaceValue_valueWasReplaced) {
   OSXClipboard clipboard;
   clipboard.open(0);
 
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
   clipboard.add(IClipboard::kText, "maxivista sucks"); // haha, just kidding.
 
   String actual = clipboard.get(IClipboard::kText);
@@ -114,7 +114,7 @@ TEST(OSXClipboardTests, has_withFormatAdded_returnsTrue) {
   OSXClipboard clipboard;
   clipboard.open(0);
   clipboard.empty();
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
 
   bool actual = clipboard.has(IClipboard::kText);
 
@@ -145,11 +145,11 @@ TEST(OSXClipboardTests, get_withFormatAdded_returnsExpected) {
   OSXClipboard clipboard;
   clipboard.open(0);
   clipboard.empty();
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
 
   String actual = clipboard.get(IClipboard::kText);
 
-  EXPECT_EQ("deskflow rocks!", actual);
+  EXPECT_EQ("synergy rocks!", actual);
 }
 
 #endif
